main/libmtp: upgrade to 1.1.17

--- a/main/libmtp/APKBUILD
+++ b/main/libmtp/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Natanael Copa <ncopa@alpinelinux.org>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=libmtp
-pkgver=1.1.16
+pkgver=1.1.17
 pkgrel=0
 pkgdesc="Software library for MTP media players"
 url="http://libmtp.sourceforge.net"
@@ -10,11 +10,9 @@ license="LGPL-2.0-or-later"
 depends_dev="libusb-compat-dev"
 makedepends="$depends_dev eudev-dev"
 subpackages="$pkgname-dev $pkgname-examples"
-source="http://download.sourceforge.net/libmtp/$pkgname-$pkgver.tar.gz"
-builddir="$srcdir/$pkgname-$pkgver"
+source="http://download.sourceforge.net/libmtp/libmtp-$pkgver.tar.gz"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -28,12 +26,10 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 }
 
@@ -43,4 +39,4 @@ examples() {
 	mv "$pkgdir"/usr/bin "$subpkgdir"/usr/
 }
 
-sha512sums="0540271930c1c932c5d06dcdd30142d407a4fadd022b195e8339d614fa3ec9b050605bf013b28ac6451f4dfcddf7add949c928acb1382802ab5fd6311c1628a0  libmtp-1.1.16.tar.gz"
+sha512sums="f2648e259529bd3dfe74a7049a79c4b0042bcaf63cc1fec8b232b66312d62e9620280e4f725312c9ef8207f1f1ceac19f460a0a8772a3cc6c7f0b00ead01add2  libmtp-1.1.17.tar.gz"
