community/nerd-fonts: Add Fira Mono and Monofur

--- a/community/nerd-fonts/APKBUILD
+++ b/community/nerd-fonts/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Leo <thinkabit.ukim@gmail.com>
 pkgname=nerd-fonts
 pkgver=2.1.0
-pkgrel=3
+pkgrel=4
 pkgdesc="Iconic font aggregator, collection and patcher"
 url="https://nerdfonts.com"
 arch="noarch"
@@ -27,6 +27,8 @@ subpackages="
 	font-go-mono-nerd:go:noarch
 	font-iosevka-nerd:iosevka:noarch
 	font-jetbrains-mono-nerd:jetbrains:noarch
+	font-fira-mono-nerd:fira:noarch
+	font-monofur-nerd:monofur:noarch
 	"
 source="
 	Hermit-$pkgver.zip::https://github.com/ryanoasis/nerd-fonts/releases/download/v$pkgver/Hermit.zip
@@ -49,6 +51,8 @@ source="
 	go-mono-$pkgver.zip::https://github.com/ryanoasis/nerd-fonts/releases/download/v$pkgver/Go-Mono.zip
 	iosevka-$pkgver.zip::https://github.com/ryanoasis/nerd-fonts/releases/download/v$pkgver/Iosevka.zip
 	jetbrains-mono-$pkgver.zip::https://github.com/ryanoasis/nerd-fonts/releases/download/v$pkgver/JetBrainsMono.zip
+	fira-mono-$pkgver.zip::https://github.com/ryanoasis/nerd-fonts/releases/download/v$pkgver/FiraMono.zip
+	monofur-$pkgver.zip::https://github.com/ryanoasis/nerd-fonts/releases/download/v$pkgver/Monofur.zip
 	"
 builddir="$srcdir"
 
@@ -191,6 +195,18 @@ jetbrains() {
 	_install_font_ttf 'JetBrains Mono'
 }
 
+fira() {
+	depends="fontconfig"
+	pkgdesc="$pkgdesc (Fira Mono)"
+	_install_font_otf 'Fira Mono'
+}
+
+monofur() {
+	depends="fontconfig"
+	pkgdesc="$pkgdesc (Monofur)"
+	_install_font_ttf monofur
+}
+
 sha512sums="caf9026646ea1756c0c3d4f5ef08b2329ce10f6bfeefd7a4c7cfba1ac16c85e08103cd05fe4ba9c34fc6f35bb1a5a8830053dc5f90f153410fec12ef134bf84a  Hermit-2.1.0.zip
 6fc219e954295fe4cc1a778141aa464f2b08d73def4c3428e875502d7c1cce1f2d5a4f178a83641e1e4b5d5c45eb406f11ab7858723894dd0bf4ec5e08775adf  ia-Writer-2.1.0.zip
 9189ac650b258528f51fa83d5bdd0c8f165c969d00b5a82ccdaf824684de188c8db10f92eb125591351aefcf1012cf198a07c643b3b8a3a7c2c8074e143cc926  terminus-2.1.0.zip
@@ -210,4 +226,6 @@ fa545a32df4a94ba760378835d3b1d819a099d938a8dbfdc02d7712653a62893c7c1d67cd465ae96
 9c0abc645b0db737f6f648d0d93f5fab1c7d0cb2e5d99e57de3476c61006a40faa430c6c1cc4cf23164d8e219c0419175e61b45b1780c7c43069aa0c89bb32eb  space-mono-2.1.0.zip
 27eed9df1161564db22278b88492e30976dfbc8783bcfda6324c3dad3246f5d1466b2d318b7fbaa641baf410afbc7b362f310e410484dbead9d2f0e73de03ea1  go-mono-2.1.0.zip
 f97624aa018012313d1b496629a0db42c6b7f23eb473d71791445bbb7e1662335f846a37ee90d162e3eefee429169dd059407db0270ef5f327b9053e61417d8c  iosevka-2.1.0.zip
-effc1a81670c37b07f17f1c756a480091c777f6074b59cd6eefd09c8d5210b529de3c41e9cedf4992aacd9fe5bb3a5b331411bfe5b2b6f0eb8680a8e852247c2  jetbrains-mono-2.1.0.zip"
+effc1a81670c37b07f17f1c756a480091c777f6074b59cd6eefd09c8d5210b529de3c41e9cedf4992aacd9fe5bb3a5b331411bfe5b2b6f0eb8680a8e852247c2  jetbrains-mono-2.1.0.zip
+7bf6bed10d044ff487cc4c0137159180dc150fbb827e87359d89a29cc0eb9e6484b40434968a4c6ba96e2d54933db826b5f2d7f421ba914decda5c2d3497803e  fira-mono-2.1.0.zip
+392df23757ceff77278dda9afb7820a8807fbbc46dd1c1b46486fc697891b8b9dcc63288b64c83187b140bf85443fe8d1bbc8d0d0497ca1be0d6aa11d99f5ed5  monofur-2.1.0.zip"
