--- a/main/duply/APKBUILD
+++ b/main/duply/APKBUILD
@@ -2,7 +2,7 @@
 # Contributor: Carlo Landmeter <clandmeter@gmail.com>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=duply
-pkgver=2.2
+pkgver=2.2.1
 pkgrel=0
 pkgdesc="Wrapper for duplicity"
 url="https://duply.net"
@@ -13,7 +13,7 @@ depends="duplicity bash"
 options="!nocheck"
 makedepends="$depends_dev txt2man"
 subpackages="$pkgname-doc"
-source="https://ufpr.dl.sourceforge.net/project/ftplicity/duply%20%28simple%20duplicity%29/${pkgver}.x/duply_$pkgver.tgz"
+source="https://netix.dl.sourceforge.net/project/ftplicity/duply%20(simple%20duplicity)/2.2.x/duply_${pkgver}.tgz"
 builddir="$srcdir"/duply_${pkgver}
 
 build() {
@@ -31,4 +31,4 @@ package() {
 		"$pkgdir"/usr/share/licenses/$pkgname/COPYING
 }
 
-sha512sums="4c75e140162b45bb7e32e8979eeb5457f1157addb28e5e68d85872f1c8e21de1f39a800fe7829b04928c6620794cf94f2b3a5d01b0a2bc5c0d9713fced911ec0  duply_2.2.tgz"
+sha512sums="1df88ec47af834390f6bb9cf2a7ad4f9302238ab3576691a8e90686054fc615b0a7be1ccda0f6edaf20c410b09721892e00ba69360a65d0b77cbbe0e308975d2  duply_2.2.1.tgz"
