--- a/testing/texmaker/APKBUILD
+++ b/testing/texmaker/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Francesco Colista <fcolista@alpinelinux.org>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname="texmaker"
-pkgver="5.0.3"
+pkgver=5.0.4
 pkgrel=0
 pkgdesc="Free cross-platform LaTeX editor since 2003"
 url="https://www.xm1math.net/texmaker/index.html"
@@ -26,4 +26,4 @@ package() {
 	make INSTALL_PATH="$pkgdir" INSTALL_ROOT="$pkgdir" PREFIX="/usr" install
 }
 
-sha512sums="fed09b1ac628f4a8cab24257f2ca35093f20a82d1a3b8c38d12878ff94f0933b7449e5ba651831612b62417426396327ea8ba64e830fe0537757abe65bcd5284  texmaker-5.0.3.tar.bz2"
+sha512sums="34ff5773358c2fffbc9e7e61028cd74eef231152e3483531b66cb0d907dd8f70a4e8b6d6ea09b0b11387b592f6d1676ba8a1e737b26c86a45b16882e53edff1f  texmaker-5.0.4.tar.bz2"
