--- a/community/ezstream/APKBUILD
+++ b/community/ezstream/APKBUILD
@@ -1,37 +1,28 @@
 # Contributor: Lionel Voirol <lionel@sinux.ch>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=ezstream
-pkgver=0.6.0
+pkgver=1.0.0
 pkgrel=0
 pkgdesc="Ezstream is a command line source client for Icecast media streaming servers."
 url="http://www.icecast.org/ezstream.php"
 arch="all"
 license="GPL-2.0"
-depends=""
-depends_dev=""
-makedepends="$depends_dev libshout-dev libxml2-dev libvorbis-dev"
-install=""
+makedepends="libshout-dev libxml2-dev libvorbis-dev check-dev taglib-dev bsd-compat-headers"
 subpackages="$pkgname-doc"
 source="http://downloads.xiph.org/releases/ezstream/ezstream-$pkgver.tar.gz"
 
-builddir=$srcdir/$pkgname-$pkgver
-
-prepare() {
-	default_prepare || return 1
-	update_config_guess || return 1
+build() {
+	./configure \
+		--prefix=/usr
+	make
 }
 
-build() {
-	cd "$builddir"
-	./configure \
-		--prefix=/usr \
-		|| return 1
-	make || return 1
+check() {
+	make check
 }
 
 package() {
-	cd "$builddir"
-	make DESTDIR="$pkgdir" install || return 1
+	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="d6b621db85a0d56dcc54a8b7a0136c25342ec507f04ab397a53f46a74e85e94806e17d0a0a59e66096b5c0d97b7f98eaba95a50c1ca6c8d82aed11b854d0d33d  ezstream-0.6.0.tar.gz"
+sha512sums="16c67cd6b02de2e87699e24a93dfa6ead8a3de1e42f074175cc56787fd8a3c9c601ad2b78db579d3bfb7e96e66a85b24ae097565748b756142439318e48b7531  ezstream-1.0.0.tar.gz"
