--- a/main/hylafaxplus/APKBUILD
+++ b/main/hylafaxplus/APKBUILD
@@ -2,8 +2,8 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=hylafaxplus
 _pkgname=hylafax
-pkgver=7.0.1
-pkgrel=1
+pkgver=7.0.2
+pkgrel=0
 pkgdesc="Making the Premier Open-Source Fax Management System Even Better"
 url="http://hylafax.sourceforge.net"
 arch="all"
@@ -20,7 +20,6 @@ source="https://downloads.sourceforge.net/hylafax/${_pkgname}-${pkgver}.tar.gz
 	common-functions-busybox-awk.patch
 	no-locale.patch
 	utf8-dictionary.patch
-	libtiff-41-compatibility.patch
 	"
 builddir="$srcdir"/$_pkgname-$pkgver
 
@@ -92,10 +91,9 @@ package(){
 		"$pkgdir"/etc/conf.d/$pkgname
 }
 
-sha512sums="2930cf19a83e7826ac8c6ee9e7d58789fd7e8202cb80cc4a953e67e1e600e76caaa281c173fc78df645cd1e308123c34279f158f0f065880853b908ed708f57f  hylafax-7.0.1.tar.gz
+sha512sums="ea68404ad79e798b29450683eaa927e73033e0fa8160b803a3e2c9000df487c81193cc8fc0c1187477f5e1b2e26eec1c065ebc17e0be82e9a3e3758b1b5b5e4e  hylafax-7.0.2.tar.gz
 54025c3ee3683476fa947f1e29cda7cc61027e2cbb0be1d400c7f715b4087a5c7693e0e3f8fdb1a8ecf56f48c03e4f0d82d12a2d6ae93707b13d08569510c917  hylafaxplus.initd
 a2117eddc8f0ff70a23a90f2001dcb88c5bddee46ffa021d6d1701cc5cfc3bcb0362ead2b1b1ce2b288992728053c5947466d08916649f45e7dfb1876576e50f  hylafaxplus.confd
 41ae2055a7781d83fc275aafe18ced0fe75ba79d3ad7d5096eabaeae3a514b564723185dd33820268577174f6c53bfcfddb30922ba50754b15c5c3b0abbec837  common-functions-busybox-awk.patch
 4a1243daff9904e6395c3e28aa4a78a74de99f5aa9dbf5055a3781acfcd9b1b3db42b1569409b27e3ef9b0e55272dc99122436a79a08c9a1c140c2547c5a2c15  no-locale.patch
-f5f1e33897a91b8297311c033d50e7ea2f9088568264a5b9224285066a504da8cc4296f973dd0a70e09abca538cef26964c6181f4f67f76400783d0697f05e61  utf8-dictionary.patch
-2776a3585bfe5cbd06c44600e20ce041f69d96d8a12782c824f6be8d8dd0de983d6dbf12d5077a8abf4f999a5616ab7847d35367ee600e4eec1a02e02063ff4e  libtiff-41-compatibility.patch"
+f5f1e33897a91b8297311c033d50e7ea2f9088568264a5b9224285066a504da8cc4296f973dd0a70e09abca538cef26964c6181f4f67f76400783d0697f05e61  utf8-dictionary.patch"
