main/hylafaxplus: upgrade to 7.0.2

--- a/main/hylafaxplus/APKBUILD
+++ b/main/hylafaxplus/APKBUILD
@@ -14,7 +14,7 @@ depends="ghostscript bash tiff-tools !$_pkgname"
 makedepends="zlib-dev tiff-dev<4.2 gettext-dev openldap-dev lcms2-dev
 	libffi-dev jbig2dec-dev sed readline-dev"
 subpackages="$pkgname-doc $pkgname-lang $pkgname-openrc"
-source="https://downloads.sourceforge.net/hylafax/${_pkgname}-${pkgver}.tar.gz
+source="https://downloads.sourceforge.net/hylafax/$_pkgname-$pkgver.tar.gz
 	$pkgname.initd
 	$pkgname.confd
 	common-functions-busybox-awk.patch
@@ -24,7 +24,6 @@ source="https://downloads.sourceforge.net/hylafax/${_pkgname}-${pkgver}.tar.gz
 builddir="$srcdir"/$_pkgname-$pkgver
 
 build() {
-	cd "$builddir"
 	# the configure script does not handle ccache or distcc
 	export CC=gcc
 	export CXX=g++
@@ -54,30 +53,29 @@ build() {
 	make -j1
 }
 
-package(){
-	cd "$builddir"
+package() {
 	# this makefile has issues installing, it doesn't use the standard
 	#   install - but the following seems to work
-	mkdir -p "${pkgdir}"/usr/bin "${pkgdir}"/usr/sbin
-	mkdir -p "${pkgdir}"/usr/lib/"$pkgname" "${pkgdir}"/usr/share/man
-	mkdir -p "${pkgdir}"/usr/share/locale/$pkgname
-	mkdir -p "${pkgdir}"/var/spool/"$pkgname"
-	mkdir -p "${pkgdir}"/var/spool/"$pkgname"/lib
-	touch "${pkgdir}"/var/spool/"$pkgname"/lib/pagesizes
-	chown uucp:uucp "${pkgdir}"/var/spool/"$pkgname"
-	chmod 0600 "${pkgdir}"/var/spool/"$pkgname"
+	mkdir -p "$pkgdir"/usr/bin "$pkgdir"/usr/sbin
+	mkdir -p "$pkgdir"/usr/lib/"$pkgname" "$pkgdir"/usr/share/man
+	mkdir -p "$pkgdir"/usr/share/locale/$pkgname
+	mkdir -p "$pkgdir"/var/spool/"$pkgname"
+	mkdir -p "$pkgdir"/var/spool/"$pkgname"/lib
+	touch "$pkgdir"/var/spool/"$pkgname"/lib/pagesizes
+	chown uucp:uucp "$pkgdir"/var/spool/"$pkgname"
+	chmod 0600 "$pkgdir"/var/spool/"$pkgname"
 
 	make \
-		BIN="${pkgdir}/usr/bin" \
-		SBIN="${pkgdir}/usr/sbin" \
-		LIBDIR="${pkgdir}/usr/lib" \
-		LIB="${pkgdir}/usr/lib" \
-		LIBEXEC="${pkgdir}/usr/sbin" \
-		LIBDATA="${pkgdir}/var/spool/$pkgname"/lib \
-		MAN="${pkgdir}/usr/share/man" \
-		LOCALEDIR="${pkgdir}/usr/share/locale/$pkgname" \
-		SPOOL="${pkgdir}/var/spool/$pkgname" \
-		HTMLDIR="${pkgdir}/usr/share/doc/$pkgname/html" \
+		BIN="$pkgdir/usr/bin" \
+		SBIN="$pkgdir/usr/sbin" \
+		LIBDIR="$pkgdir/usr/lib" \
+		LIB="$pkgdir/usr/lib" \
+		LIBEXEC="$pkgdir/usr/sbin" \
+		LIBDATA="$pkgdir/var/spool/$pkgname"/lib \
+		MAN="$pkgdir/usr/share/man" \
+		LOCALEDIR="$pkgdir/usr/share/locale/$pkgname" \
+		SPOOL="$pkgdir/var/spool/$pkgname" \
+		HTMLDIR="$pkgdir/usr/share/doc/$pkgname/html" \
 	install
 
 	install -m644 -D "$srcdir/$_pkgname-$pkgver/COPYRIGHT" \
