main/p11-kit: add libtasn1-progs to makedepends
78e034fe splits progs from lib which are needed in build

--- a/main/p11-kit/APKBUILD
+++ b/main/p11-kit/APKBUILD
@@ -7,7 +7,7 @@ pkgdesc="Library for loading and sharing PKCS#11 modules"
 url="https://p11-glue.freedesktop.org/"
 arch="all"
 license="BSD-3-Clause"
-makedepends="meson libtasn1-dev libffi-dev"
+makedepends="meson libtasn1-dev libtasn1-progs libffi-dev"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-trust $pkgname-server"
 source="https://github.com/p11-glue/p11-kit/releases/download/$pkgver/p11-kit-$pkgver.tar.xz"
 
