main/sharutils: add xz to depends
tests run xz with options not provided by busybox xz so we asume busybox
xz is not supported.

--- a/main/sharutils/APKBUILD
+++ b/main/sharutils/APKBUILD
@@ -2,12 +2,12 @@
 # Maintainer:
 pkgname=sharutils
 pkgver=4.15.2
-pkgrel=0
+pkgrel=1
 pkgdesc="Utilities for manipulating shell archives"
 url="https://www.gnu.org/software/sharutils/"
 arch="all"
 license="GPL-3.0+"
-depends="bzip2"
+depends="bzip2 xz"
 makedepends="gettext-dev texinfo"
 checkdepends="diffutils"
 subpackages="$pkgname-lang $pkgname-doc"
