testing/gprbuild: disable to unblock the builders

--- a/testing/gprbuild/APKBUILD
+++ b/testing/gprbuild/APKBUILD
@@ -4,7 +4,7 @@ pkgname=gprbuild
 pkgver=2019
 pkgrel=0
 pkgdesc="Builder for multi-language systems"
-arch="all"
+arch="" # Fails because the mirrors.cdn.adacore cannot resolve
 url="https://github.com/AdaCore/gprbuild"
 license="GPL-3.0-or-later"
 depends="gcc-gnat"
