main/cracklib-words: modernize, fix url= by rebuilding

--- a/main/cracklib-words/APKBUILD
+++ b/main/cracklib-words/APKBUILD
@@ -2,26 +2,21 @@
 # Maintainer: Fabian Affolter <fabian@affolter-engineering.ch>
 pkgname=cracklib-words
 pkgver=20080507
-pkgrel=2
+pkgrel=3
 pkgdesc="Large list of words for crack/craclib"
+options="!check" # No testsuite
 url="https://sourceforge.net/projects/cracklib"
 arch="noarch"
 license="LGPL-2.0-or-later"
-depends=""
-makedepends=""
-install=""
-subpackages=""
-source="https://downloads.sourceforge.net/cracklib/$pkgname-$pkgver.gz"
+source="$pkgname-$pkgver.gz::https://downloads.sourceforge.net/cracklib/cracklib-words-$pkgver.gz"
+builddir="$srcdir"
 
-build() {
-	cd "$srcdir"
-	gunzip "$pkgname-$pkgver".gz
+unpack() {
+	gunzip "$srcdir"/"$pkgname-$pkgver.gz"
 }
 
 package() {
-	cd "$srcdir"
-	install -m644 -D "$pkgname-$pkgver" \
-		"$pkgdir"/usr/share/dict/$pkgname || return 1
+	install -m644 -D "$pkgname-$pkgver" "$pkgdir"/usr/share/dict/$pkgname
 }
 
 sha512sums="d21055d6439a2b92b23ab6fd31222d9330315a0b44f53fae308ce5749a9fcb33b7df982f85ca8e2d6d2f9cc4c7264dfc3ed454edbccecd76289713df09fd633e  cracklib-words-20080507.gz"
