testing/e2tools: move to community

--- a/community/e2tools/APKBUILD
+++ b/community/e2tools/APKBUILD
@@ -9,7 +9,7 @@ arch="all"
 license="GPL-2.0-only"
 makedepends="e2fsprogs-dev"
 subpackages="$pkgname-doc"
-source="https://github.com/$pkgname/$pkgname/releases/download/$pkgver/$pkgname-$pkgver.tar.gz
+source="https://github.com/e2tools/e2tools/releases/download/$pkgver/e2tools-$pkgver.tar.gz
 	e2cp.1
 	e2ln.1
 	e2ls.1
