--- a/testing/wabt/APKBUILD
+++ b/testing/wabt/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Ian Douglas Scott <ian@iandouglasscott.com>
 # Maintainer: Ian Douglas Scott <ian@iandouglasscott.com>
 pkgname=wabt
-pkgver=1.0.12
+pkgver=1.0.13
 pkgrel=0
 pkgdesc="WebAssembly binary toolkit"
 arch="all"
@@ -9,12 +9,19 @@ url="https://github.com/WebAssembly/wabt"
 license="Apache-2.0"
 makedepends="cmake"
 subpackages="$pkgname-doc"
-source="$pkgname-$pkgver.tar.gz::$url/archive/$pkgver.tar.gz"
+_wasm_c_api_commit="d9a80099d496b5cdba6f3fe8fc77586e0e505ddc"
+source="$pkgname-$pkgver.tar.gz::$url/archive/$pkgver.tar.gz
+	wasm-c-api-$_wasm_c_api_commit.tar.gz::https://github.com/WebAssembly/wasm-c-api/archive/$_wasm_c_api_commit.tar.gz
+	"
 # Tests require vendored dependencies (as git submodules). Should be modified
 # to use copies from repository.
 options="!check"
 
 build() {
+	# https://github.com/WebAssembly/wabt/issues/1315
+	rmdir third_party/wasm-c-api
+	ln -s ../../wasm-c-api-$_wasm_c_api_commit third_party/wasm-c-api
+
 	mkdir -p build
 	cd build
 	cmake -DCMAKE_INSTALL_PREFIX=/usr \
@@ -28,4 +35,5 @@ package() {
 	cd build
 	make DESTDIR="$pkgdir" install
 }
-sha512sums="48ab1819efbfe0151d9b1a66c2155fd11d6d3841761a949cc26329a1b51ebcc91ba07e9f18c5fd9df8bef28e7b56e1564b82398bdee19dda730019f74d2a8ec0  wabt-1.0.12.tar.gz"
+sha512sums="b051e7254877ccef131d6f8b26ab5587ac9c72e0cafb60e160889c7e8731f35dbb2a3488fd57f878c68006695d635eccc186738a23a6bc9747993daf3e17a6d7  wabt-1.0.13.tar.gz
+b6ee7d2d83a3ca7b3cb3ee110282f7d32eada1d9020cadd3fdec58f40478879fd9ac9fada526021d8f6e8a26e1df7353df313d4149be2ffe4aea3a28f856fd89  wasm-c-api-d9a80099d496b5cdba6f3fe8fc77586e0e505ddc.tar.gz"
