testing/gprbuild: updates urls to ones that currently work

--- a/testing/gprbuild/APKBUILD
+++ b/testing/gprbuild/APKBUILD
@@ -4,11 +4,11 @@ pkgname=gprbuild
 pkgver=2019
 pkgrel=0
 pkgdesc="Builder for multi-language systems"
-arch="" # Fails because the mirrors.cdn.adacore cannot resolve
+arch="all"
 url="https://github.com/AdaCore/gprbuild"
 license="GPL-3.0-or-later"
 depends="gcc-gnat"
-source="$pkgname-$pkgver.tar.gz::http://mirrors.cdn.adacore.com/art/5cdf8e8031e87a8f1d425093 xmlada-$pkgver.tar.gz::http://mirrors.cdn.adacore.com/art/5cdf916831e87a8f1d4250b5"
+source="$pkgname-$pkgver.tar.gz::https://community.download.adacore.com/v1/0c03c05cef70b85144ba0e624a46e8952183b666?filename=gprbuild-2019-20190517-194D8-src.tar.gz xmlada-$pkgver.tar.gz::https://community.download.adacore.com/v1/ce0b67754f149cd230ba842effeff0ab3033ed0c?filename=xmlada-2019-20190429-19B9D-src.tar.gz"
 # gprbuild doesn't seem to have tests
 options="!check"
 
