--- a/community/proj/APKBUILD
+++ b/community/proj/APKBUILD
@@ -1,31 +1,23 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=proj
 pkgver=6.3.1
-pkgrel=0
+pkgrel=1
 _datumgridver=1.8
-_jdkver=11
 pkgdesc="PROJ coordinate transformation software library"
 url="https://proj.org/"
-arch="s390x aarch64 x86_64 ppc64le"
+arch="all"
 license="MIT"
-makedepends="
-	apache-ant
-	openjdk$_jdkver-jdk
-	sqlite
-	sqlite-dev
-	"
+makedepends="cmake sqlite sqlite-dev gtest-dev"
+checkdepends="bash"
 subpackages="
 	$pkgname-doc
-	$pkgname-static
 	$pkgname-util:util
-	java-$pkgname:java:noarch
 	$pkgname-datumgrid:datumgrid:noarch
 	$pkgname-dev
 	"
 source="
 	http://download.osgeo.org/proj/proj-$pkgver.tar.gz
 	http://download.osgeo.org/proj/proj-datumgrid-$_datumgridver.zip
-	TestJni.java
 	"
 
 prepare() {
@@ -34,16 +26,19 @@ prepare() {
 }
 
 build() {
-	./configure \
-		CPPFLAGS=-I/usr/lib/jvm/java-$_jdkver-openjdk/include/linux \
-		--build=$CBUILD \
-		--host=$CHOST \
-		--prefix=/usr \
-		--with-jni=/usr/lib/jvm/java-$_jdkver-openjdk/include
+	if [ "$CBUILD" != "$CHOST" ]; then
+		CMAKE_CROSSOPTS="-DCMAKE_SYSTEM_NAME=Linux -DCMAKE_HOST_SYSTEM_NAME=Linux"
+	fi
+	cmake \
+		-DCMAKE_INSTALL_PREFIX=/usr \
+		-DCMAKE_INSTALL_LIBDIR=lib \
+		-DBUILD_SHARED_LIBS=True \
+		-DCMAKE_BUILD_TYPE=None \
+		-DCMAKE_CXX_FLAGS="$CXXFLAGS" \
+		-DCMAKE_C_FLAGS="$CFLAGS" \
+		-DUSE_EXTERNAL_GTEST=ON \
+		${CMAKE_CROSSOPTS} .
 	make
-
-	cd "$builddir/jniwrap"
-	ant compile javadoc
 }
 
 package() {
@@ -52,8 +47,6 @@ package() {
 
 	make DESTDIR="$pkgdir" install
 
-	mkdir -p "$pkgdir/usr/share/doc/$pkgname/javadoc"
-	cp -R jniwrap/out/apidocs/*  "$pkgdir/usr/share/doc/$pkgname/javadoc"
 	install -Dm644 COPYING "$pkgdir/usr/share/licenses/$pkgname/COPYING"
 }
 
@@ -64,22 +57,6 @@ datumgrid() {
 	mv "$pkgdir/usr/share/proj" "$subpkgdir/usr/share"
 }
 
-java() {
-	pkgdesc="Cartographic projection library (JNI bindings)"
-	depends="so:libproj.so.15"
-
-	cd "$builddir/jniwrap"
-	mkdir -p "$subpkgdir/usr/share/java/"
-	local _javabindingsver=$(grep "name=\"version\"" build.xml | cut -d'"' -f 4)
-	mv out/proj.jar "$subpkgdir/usr/share/java/proj-$_javabindingsver.jar"
-	ln -s "proj-$_javabindingsver.jar" "$subpkgdir/usr/share/java/proj.jar"
-
-	local _libfilepath=$(ls $pkgdir/usr/lib/libproj.so.??)
-	local _libfilename=$(basename $_libfilepath)
-	mkdir -p "$subpkgdir/usr/java/packages/lib/"
-	ln -s "/usr/lib/$_libfilename" "$subpkgdir/usr/java/packages/lib/libproj.so"
-}
-
 util() {
 	pkgdesc="Cartographic projection library (utilities)"
 
@@ -88,18 +65,8 @@ util() {
 }
 
 check() {
-	make -j1 check
-
-	# Test JNI bindings
-	cp $srcdir/TestJni.java TestJni.java
-	/usr/lib/jvm/default-jvm/bin/javac -cp "$builddir/jniwrap/out/proj.jar" TestJni.java
-	PROJ_LIB="$builddir"/data /usr/lib/jvm/java-$_jdkver-openjdk/bin/java \
-			-Djava.library.path="$builddir/src/.libs/" \
-			-cp "$builddir/jniwrap/out/proj.jar":. \
-			TestJni | \
-		grep "\[9.0, 0.0, 8.101251062924646, 0.9046185788931331, 9.898748937075354, -0.9046185788931331\]"
+	CTEST_OUTPUT_ON_FAILURE=TRUE ctest --force-new-ctest-process
 }
 
 sha512sums="669b752f491bd99e320b0750c7129251a562a303e008e3d89c8e71baefd7f6d4ccb08234b3039c03694e2cc93b8dde81771cd7ffd981ff8045d855240a480a5e  proj-6.3.1.tar.gz
-991206f17348b3de484eb5364d773cd06577057228c2d1a0a1c1658308e2596ca13338a666fa71ddd76d538f23dd5bf21e178fd26a785717edd847a17e5c0cd1  proj-datumgrid-1.8.zip
-36fe2482f89c6ca38883db99b7f1bf5c650a499c678f799f6b10040e3c90873f6c8bfae08f80eaca99b8957a5361b6966f1925184b4050885af1808e05d063e9  TestJni.java"
+991206f17348b3de484eb5364d773cd06577057228c2d1a0a1c1658308e2596ca13338a666fa71ddd76d538f23dd5bf21e178fd26a785717edd847a17e5c0cd1  proj-datumgrid-1.8.zip"
