testing/direnv: upgrade to 2.21.2

--- a/testing/direnv/APKBUILD
+++ b/testing/direnv/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Kevin Daudt <kdaudt@alpinelinux.org>
 pkgname=direnv
-pkgver=2.20.1
-pkgrel=1
+pkgver=2.21.2
+pkgrel=0
 pkgdesc="Environment variable switcher for the shell"
 url="https://direnv.net"
 arch="all"
@@ -9,7 +9,7 @@ license="MIT"
 checkdepends="bash"
 makedepends="go"
 subpackages="$pkgname-doc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/direnv/$pkgname/archive/v$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/direnv/direnv/archive/v$pkgver.tar.gz"
 builddir="$srcdir/src/github.com/direnv/$pkgname"
 
 prepare() {
@@ -33,4 +33,4 @@ package() {
 	make DESTDIR="$pkgdir/usr" install
 }
 
-sha512sums="f438e0b41c3f1ef41841c08eff4fefb8684f40b23a1d54c03b8d4ab2c81143bd3314fda83dc334dcd6233cdecf50764f6d61afae0ae6c450a6b8f4f181c5a931  direnv-2.20.1.tar.gz"
+sha512sums="a63b0bfa24041c8fb3bead52bce1917b02d61e09e48a3698c1358dbd3b40d7e6c66bdc26597b69805476a7deeb2a81672ee0b25732b25982d0dd0426c102e83e  direnv-2.21.2.tar.gz"
