testing/tiled: upgrade to 1.3.2

--- a/testing/tiled/APKBUILD
+++ b/testing/tiled/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: David Demelier <markand@malikania.fr>
 # Maintainer: David Demelier <markand@malikania.fr>
-pkgname="tiled"
-pkgver=1.3.1
+pkgname=tiled
+pkgver=1.3.2
 pkgrel=0
 pkgdesc="powerful tile map editor"
 url="http://mapeditor.org"
@@ -21,4 +21,4 @@ package() {
 	make install INSTALL_ROOT="$pkgdir"
 }
 
-sha512sums="b2ed5c0ff043990177809873417e31e8ee2894473b3084d0302e5557c19043c1763cf55d8ade16335ba3d64e7b4b903dd5fb88fd4bcf878c7c4d873bc9c7ed73  tiled-1.3.1.tar.gz"
+sha512sums="25dedfde6f48b0bd34a500481662c3da8c6f78b023b4d5c63559c4240db22fb664ec057d3d801714cb682a6bd2e870bf072ab688b1d00c017f0ea5af980d5ead  tiled-1.3.2.tar.gz"
