community/upx: upgrade to 3.96

--- a/community/upx/APKBUILD
+++ b/community/upx/APKBUILD
@@ -1,8 +1,8 @@
 # Maintainer: Mitch Tishmack <mitch.tishmack@gmail.com>
 # TODO: unbundle lzma-sdk
 pkgname=upx
-pkgver=3.95
-pkgrel=2
+pkgver=3.96
+pkgrel=0
 pkgdesc="The Ultimate Packer for eXecutables"
 url="https://upx.github.io"
 arch="all"
@@ -10,21 +10,17 @@ license="GPL-2.0 Public-Domain"
 # perl-dev is used to generate man pages
 makedepends="bash perl-dev ucl-dev zlib-dev"
 subpackages="$pkgname-doc"
-source="https://github.com/upx/$pkgname/releases/download/v$pkgver/$pkgname-$pkgver-src.tar.xz
+source="https://github.com/upx/upx/releases/download/v$pkgver/upx-$pkgver-src.tar.xz
 	0001-rm-broken-whitespace-check.patch"
 # tests fail
 if [ "$CARCH" = "s390x" ]; then options="!check"; fi
 builddir="$srcdir/$pkgname-$pkgver-src"
 
 build() {
-	cd "$builddir"
-
 	make CXXFLAGS_OPTIMIZE= UPX_LZMADIR="$srcdir" all
 }
 
 check() {
-	cd "$builddir"
-
 	# upx -q is not quiet enough by design or broken
 
 	local upx=src/upx.out
@@ -68,11 +64,9 @@ check() {
 }
 
 package() {
-	cd "$builddir"
-
 	install -D -m 0755 src/upx.out "$pkgdir"/usr/bin/upx
 	install -D -m 0644 doc/upx.1 "$pkgdir"/usr/share/man/man1/upx.1
 }
 
-sha512sums="0e1d3e26462057f16587197e73301957e870107808fdbcd24d9976094dfa0e5efbe8da0f9b6732a99f05990dcd4be242a87ea19a7110dc052c6dc982cd596416  upx-3.95-src.tar.xz
+sha512sums="2d4d1be21d274d9bfdee9b9815396f5e5ff0bcdfb781b7be5fafa4d1e224028e412ec5f5ba607c482671aae27ccf9069abb2db0fb58f78f3a102a51897df2b11  upx-3.96-src.tar.xz
 a41dd8b8e9e884c78c410a49b4486963f6dd90759ba49eb05123e81b8e4fbe3d23af2ba5c2acf64218b7edeec7df0793b4030d1375c167a183a4d70d21addf50  0001-rm-broken-whitespace-check.patch"
