--- a/testing/wl-clipboard-x11/APKBUILD
+++ b/testing/wl-clipboard-x11/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Robert Sacks <robert@sacks.email>
 # Maintainer: Robert Sacks <robert@sacks.email>
 pkgname=wl-clipboard-x11
-pkgver=4
+pkgver=5
 pkgrel=0
 pkgdesc="A wrapper to use wl-clipboard as a drop-in replacement to X11 clipboard tools"
 url="https://github.com/brunelli/wl-clipboard-x11"
@@ -11,11 +11,10 @@ options="!check"
 provides="xclip xsel"
 depends="wl-clipboard"
 subpackages="$pkgname-doc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/brunelli/$pkgname/archive/v$pkgver.tar.gz"
-builddir="$srcdir/$pkgname-$pkgver"
+source="$pkgname-$pkgver.tar.gz::https://github.com/brunelli/wl-clipboard-x11/archive/v$pkgver.tar.gz"
 
 package() {
 	DESTDIR="$pkgdir" make install
 }
 
-sha512sums="caaf54dcfaecaed475ce59519516898a70da436a990642a81bdcb12b41e40ff45aed0e3d7273b76a32c246e92b327ca3f780d99d4ade4541ed46f14ec41734cb  wl-clipboard-x11-4.tar.gz"
+sha512sums="3c40c2f9b44ca5f10d16ae5a696fba04c8fea9a94be910055f3d627d975eea337507dedf9c9f9ffaee90fb8b5a7d77786b34b95a6ad08a31b45fefb0514ef468  wl-clipboard-x11-5.tar.gz"
