community/gnome: use networkmanager-elogind

--- a/community/gnome/APKBUILD
+++ b/community/gnome/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=gnome
 pkgver=3.34.0
-pkgrel=2
+pkgrel=3
 pkgdesc="GNOME (Base) meta package"
 url="https://www.gnome.org"
 arch="x86 x86_64 armv7 aarch64" # GNOME isn't available on all arches yet
@@ -24,6 +24,7 @@ depends="
 	gvfs
 	iio-sensor-proxy
 	libgnome-keyring
+	networkmanager-elogind
 	pinentry-gnome
 	polkit-elogind
 	polkit-gnome
