community/qt5-*: fix license of various Qt packages

--- a/community/qt5-qttranslations/APKBUILD
+++ b/community/qt5-qttranslations/APKBUILD
@@ -10,7 +10,7 @@ pkgrel=1
 pkgdesc="Qt5 - QtTranslations module"
 url="https://www.qt.io/developers/"
 arch="noarch"
-license="LGPL-2.0 with exceptions or GPL-3.0 with exceptions and GFDL"
+license="GPL-3.0-only AND Qt-GPL-exception-1.0"
 makedepends="qt5-qttools-dev"
 
 case $pkgver in
