--- a/community/qt5-qtcharts/APKBUILD
+++ b/community/qt5-qtcharts/APKBUILD
@@ -11,7 +11,7 @@ pkgrel=1
 pkgdesc="Qt5 - Support for rendering and displaying SVG"
 url="https://www.qt.io/developers/"
 arch="all"
-license="LGPL-2.0 with exceptions or GPL-3.0 with exceptions"
+license="(LGPL-2.0-or-later OR GPL-3.0-only OR GPL-2.0-or-later) AND Qt-GPL-exception-1.0"
 makedepends="qt5-qtbase-dev zlib-dev"
 subpackages="$pkgname-dev"
 
