--- a/community/qt5-qtimageformats/APKBUILD
+++ b/community/qt5-qtimageformats/APKBUILD
@@ -10,7 +10,7 @@ pkgrel=1
 pkgdesc="Qt5 - QtImageFormats component"
 url="https://www.qt.io/developers/"
 arch="all"
-license="LGPL-2.0 with exceptions or GPL-3.0 with exceptions"
+license="(LGPL-2.0-or-later OR GPL-3.0-only OR GPL-2.0-or-later) AND Qt-GPL-exception-1.0"
 makedepends="qt5-qtbase-dev libmng-dev tiff-dev libwebp-dev"
 
 case $pkgver in
