--- a/community/qt5-qtx11extras/APKBUILD
+++ b/community/qt5-qtx11extras/APKBUILD
@@ -12,7 +12,7 @@ pkgrel=1
 pkgdesc="Provides platform-specific APIs for X11"
 url="https://www.qt.io/developers/"
 arch="all"
-license="GPL-3.0"
+license="(LGPL-3.0-or-later OR GPL-3.0-only OR GPL-2.0-or-later) AND Qt-GPL-exception-1.0"
 makedepends="qt5-qtbase-dev"
 subpackages="$pkgname-dev"
 replaces="qt5-x11extras"
