--- a/main/libtasn1/APKBUILD
+++ b/main/libtasn1/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=libtasn1
 pkgver=4.16.0
-pkgrel=0
+pkgrel=1
 pkgdesc="The ASN.1 library used in GNUTLS"
 url="https://www.gnu.org/software/gnutls/"
 arch="all"
@@ -38,6 +38,11 @@ check() {
 
 package() {
 	make DESTDIR="$pkgdir" install
+}
+
+dev() {
+	depends_dev="$pkgname-progs=$pkgver-r$pkgrel"
+	default_dev
 }
 
 progs() {
