community/rust: upgrade to 1.41.0

--- a/community/rust/APKBUILD
+++ b/community/rust/APKBUILD
@@ -4,10 +4,10 @@
 # Contributor: Jeizsm <jeizsm@gmail.com>
 # Maintainer: Rasmus Thomsen <oss@cogitri.dev>
 pkgname=rust
-pkgver=1.40.0
+pkgver=1.41.0
 _llvmver=9
-_bootver=1.39.0
-pkgrel=1
+_bootver=1.40.0
+pkgrel=0
 pkgdesc="The Rust Programming Language"
 url="https://www.rust-lang.org"
 arch="x86_64 armv7 armhf aarch64 x86 ppc64le"
@@ -44,6 +44,10 @@ provides="rust-bootstrap=$pkgver-r$pkgrel"
 # This is needed for -src that contains some testing binaries.
 # Disable tests for now, while we use foreign triplets
 options="!archcheck !check"
+
+# https://github.com/rust-lang/rust/issues/68794
+[ "$CARCH" = "x86" ] && options="$options textrels"
+
 subpackages="
 	$pkgname-dbg
 	$pkgname-stdlib
@@ -58,12 +62,6 @@ subpackages="
 	cargo-doc:_cargo_doc:noarch
 	"
 source="https://static.rust-lang.org/dist/rustc-$pkgver-src.tar.gz
-	https://dist.cogitri.dev/rust/rust-$_bootver-x86_64.tar
-	https://dist.cogitri.dev/rust/rust-$_bootver-x86.tar
-	https://dist.cogitri.dev/rust/rust-$_bootver-armhf.tar
-	https://dist.cogitri.dev/rust/rust-$_bootver-armv7.tar
-	https://dist.cogitri.dev/rust/rust-$_bootver-aarch64.tar
-	https://dist.cogitri.dev/rust/rust-$_bootver-ppc64le.tar
 	musl-fix-static-linking.patch
 	musl-fix-linux_musl_base.patch
 	static-pie.patch
@@ -119,8 +117,6 @@ _sharedir="usr/share/rust"
 
 ldpath="/$_rlibdir"
 
-# Find rustc in the tarball
-export PATH="$srcdir/rust-$CARCH/usr/bin:$PATH"
 export RUST_BACKTRACE=1
 # Don't use system libgit2 for now...
 # https://github.com/rust-lang/rust/issues/63476
@@ -310,13 +306,7 @@ _mv() {
 	mv "$@"
 }
 
-sha512sums="8afdb7fddbc5f2cec05fe962cd425ff8f3f41b056ffc983135d21d5c7d217084a1d73b4f9e4ff12faf7731ff1332d2889b71eed0a5216dd5eff5302d26b33d1e  rustc-1.40.0-src.tar.gz
-26de35c032183771374e9f7848d39e9b62d4475290637e3f47362648f4ef5297c0c7fa365cfc7516bfaac24802585b5a3d2be3959ab5cd7191db9808768a4892  rust-1.39.0-x86_64.tar
-43530e8cc0f6112c26c13896236165a2ba8578a602dd55c4ea7239071169a649e53759cf995e414d7c5ccdf6d64290db2bbe07752544037f7bc96c2b65c2c470  rust-1.39.0-x86.tar
-43c49bb4de1218e731239ed425cf98adcfb0797740f4937bfc216be4c1795603bf833ae2bf8401e491ca779b9e300fc0200e292d7734d199cf54bd2fe14c372e  rust-1.39.0-armhf.tar
-960201211406c9a7947d72a89a659b68f0119e0abb3b4a3ebaa5f295e05bdfa6b34fc978ff1b7f93f1e8c1d7040889b64fde04845262ec86f069b09c7842911b  rust-1.39.0-armv7.tar
-3997fb74a36fa22db0fa1ffe6907e3a67fa17627ffa8b0668540bdfe2b64441f0036e0ccca47828a689463309c9b1ecd229a851fabf97a7022cb855b2b70da1c  rust-1.39.0-aarch64.tar
-eaaf7ed97d7945d40373eb55be6ee6d70e5442579fe8b956d968fc530a9fc466240843b5cfd29fb80396da810b88516aecc6c5c909fc04e1670a0b1318aafe9d  rust-1.39.0-ppc64le.tar
+sha512sums="fb794b8d8527170add7229b136c9d96b94d0c8bae195b9db55e7e0fec41661f0e22a6e62cdcf581f4576f6969f8850a4b8b263fdc874cd5dc61e0c1ddb2833d9  rustc-1.41.0-src.tar.gz
 8d52048070e9a158810f5ef71eae07a3b107b60986375a593c3509f4c47f8e2f7fcdff8bc558c03c46127dbf66c4077dd7b5b422a83f2c49fb5d52ecfae5697e  musl-fix-static-linking.patch
 41fd9e8a8dd99074d95d664e65f92dba644b8ef9fa37b9a1d781a01fe49eaa254c430f0f277622dc4f8203aad2d129a045fdf1679a0da526d549fac60654be26  musl-fix-linux_musl_base.patch
 97e81c57af93df550577f41d795185a9eb0c37528776c250076cc57f06c87e81139eb71cd6b6a4730528511821ae50c304d7deb534d6422cd08bb44193ae605d  static-pie.patch
