community/qt5-qtwebkit: fix build

--- a/community/qt5-qtwebkit/APKBUILD
+++ b/community/qt5-qtwebkit/APKBUILD
@@ -52,7 +52,7 @@ prepare() {
 	mv Source/ThirdParty/gtest/ \
 		Source/ThirdParty/qunit/ \
 		Source/ThirdParty/orig/
-	syncqt-qt5.pl -version $_V Source/sync.profile
+	syncqt-qt5.pl -version $_v Source/sync.profile
 }
 
 build() {
