testing/profanity: upgrade to 0.8.0

--- a/testing/profanity/APKBUILD
+++ b/testing/profanity/APKBUILD
@@ -1,8 +1,8 @@
 # Contributor: Galen Abell <galen@galenabell.com>
 # Maintainer: Galen Abell <galen@galenabell.com>
 pkgname="profanity"
-pkgver="0.7.1"
-pkgrel=1
+pkgver="0.8.0"
+pkgrel=0
 pkgdesc="Ncurses based XMPP client"
 url="https://github.com/profanity-im/profanity"
 arch="all"
@@ -53,5 +53,6 @@ check() {
 
 package() {
 	make DESTDIR="$pkgdir" install
+	libtool --finish /usr/lib
 }
-sha512sums="2d7ea82c33a01605a016826590ee7d8b29f6fd3df93feb4211c414d841ee0c809b257d6df79d17003afacab278935d2e8ed96b472307740fdea7ba4bf92b383d  profanity-0.7.1.tar.gz"
+sha512sums="b3ae22e4a0f6ac26f36bc6d354c4aaed7491b05ff8cf6421fa6746aa633a3fddee3e066affec35d15c07a05121ae8faafae2bf3ce65f3bd8b59118a9fa21be15  profanity-0.8.0.tar.gz"
