--- a/main/open-iscsi/APKBUILD
+++ b/main/open-iscsi/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Leonardo Arena <rnalrd@alpinelinux.org>
 pkgname=open-iscsi
 pkgver=2.1.0
-pkgrel=1
+pkgrel=2
 pkgdesc="High performance, transport independent, multi-platform iSCSI initiator"
 url="https://www.open-iscsi.com"
 arch="all"
@@ -9,7 +9,7 @@ license="GPL-2.0-only"
 makedepends="autoconf automake kmod-dev libmount libtool linux-headers openssl-dev
 	open-isns-dev util-linux-dev"
 options="!check"
-subpackages="$pkgname-doc $pkgname-openrc"
+subpackages="$pkgname-dev $pkgname-libs $pkgname-doc $pkgname-openrc"
 source="$pkgname-$pkgver.tar.gz::https://github.com/open-iscsi/open-iscsi/archive/$pkgver.tar.gz
 	iscsid.initd
 	iscsid.confd
@@ -19,7 +19,6 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/open-iscsi/open-iscsi/archiv
 	dont-use-lib64.patch
 	remove-werror.patch
 	"
-builddir="$srcdir"/$pkgname-$pkgver
 
 
 build() {
@@ -39,7 +38,7 @@ package() {
 }
 
 sha512sums="bb1a4ff2bab0562bfd4281d757dd888e8f5d2d1ae16561cabf5598073c343e8c2dc9b35992c2bc51398faffceb9b70ea2eae214ab205a586bcb971d741d5f59d  open-iscsi-2.1.0.tar.gz
-a5544e35da3433dfde96984d2e5783991d961554b8843f4f96d4317a38d7534864882342633ed0dc15c2f9e49a419e51958593b0de1ce84644938dafabe392fc  iscsid.initd
+febf67065c133fd2f79d5aff509891d557af25739b700e961d2289a941b447099021b01fa29817bcd057147adad3a3f8948049d4f8ff3590cb7255a0fa0d715c  iscsid.initd
 075bb9cb783be7ccbc799947e0e042b85310d40b3045141dc1be40ca84ed1cc0e1e54559df501c512c179e28375314b27a03c15d9a6d4b1cabd428b2279985d3  iscsid.confd
 3686d31c5642e611c0c0c61f0f42a33030a74b518a2a108f004b9bd34b2b98d8e29ee2416a5b9cc447ab0449bdc94158b2323d977e7b7d2930dd4dcf0866da68  iscsid.conf
 1b89ffd6de0dc7bb63fc2702a97e49df4369158c66ee609acfc041b1677c07fbd964b7a709f1f324fa51a9842d4d3e11611d9783e18d526372d468163c0ac8db  musl-fixes.patch
