main/vte3: add vte-ng patches for termite

--- a/main/vte3/APKBUILD
+++ b/main/vte3/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=vte3
 pkgver=0.58.3
-pkgrel=1
+pkgrel=2
 pkgdesc="Virtual Terminal Emulator library"
 url="https://developer.gnome.org/vte/"
 arch="all"
@@ -12,7 +12,8 @@ makedepends="pango-dev gtk+3.0-dev intltool
 	linux-headers libxml2-utils pcre2-dev gperf
 	meson gtk-doc"
 source="https://download.gnome.org/sources/vte/${pkgver%.*}/vte-$pkgver.tar.xz
-	fix-W_EXITCODE.patch"
+	fix-W_EXITCODE.patch
+	vte-ng.patch"
 builddir="$srcdir/vte-$pkgver"
 
 prepare() {
@@ -41,4 +42,5 @@ package() {
 	DESTDIR="$pkgdir" ninja install
 }
 sha512sums="b0a38eb1cd7d923b0431af943dbdb89932833f9a2b0b8fc1fa9ee728c87418c1f5a424b2ccee661721093a80c569f3b41c721b0ba2302ba0c3a42d4c5e31aa9a  vte-0.58.3.tar.xz
-94de7160b71f1c41aa19e8f9dc4538cd493da1a33dda6482c332f8e8932213631ccc2355506a616772dae451d653f035c66c721bd839570d6cb55e4d2b12e8a3  fix-W_EXITCODE.patch"
+94de7160b71f1c41aa19e8f9dc4538cd493da1a33dda6482c332f8e8932213631ccc2355506a616772dae451d653f035c66c721bd839570d6cb55e4d2b12e8a3  fix-W_EXITCODE.patch
+09caf90f7c280e484c40b4205d17b3921848dfb211b15f4126cca980eb7598c498dc0fd81fb38ca30c9f0bdab44fcb532819eab09b54d96badcffbf80695bb9b  vte-ng.patch"
