--- a/main/ppp/APKBUILD
+++ b/main/ppp/APKBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=ppp
-pkgver=2.4.7
-pkgrel=6
+pkgver=2.4.8
+pkgrel=0
 pkgdesc="A daemon which implements the PPP protocol for dial-up networking"
 url="http://www.samba.org/ppp/"
 arch="all"
@@ -21,28 +21,19 @@ depends="$pkgname-chat $pkgname-radius
 	    $pkgname-daemon
 	    "
 
-source="https://ftp.samba.org/pub/ppp/ppp-$pkgver.tar.gz
-	defaultroute-metric.3.patch
+source="https://github.com/paulusmack/ppp/archive/ppp-$pkgver.tar.gz
 	musl-fix-headers.patch
 	fix-paths.patch
 	0011-build-sys-don-t-put-connect-errors-log-to-etc-ppp.patch
+	fix-pppd-magic.h.patch
+	fix-pppd-pppoe.h.patch
 	ip-down
 	ip-up
 	pppd.initd"
 
-_builddir="$srcdir"/$pkgname-$pkgver
-prepare() {
-	local i
-	cd "$_builddir"
-	for i in $source; do
-		case $i in
-		*.patch) msg $i; patch -p1 -i "$srcdir"/$i || return 1;;
-		esac
-	done
-}
+builddir="$srcdir"/$pkgname-$pkgname-$pkgver
 
 build () {
-	cd "$_builddir"
 
 	# fix CFLAGS
 	# -D_GNU_SOURCE is needed for IPv6 to work apparently
@@ -58,6 +49,8 @@ build () {
 	sed -i "s:^#HAVE_INET6=y:HAVE_INET6=y:" pppd/Makefile.linux
 	# Enable Microsoft proprietary Callback Control Protocol
 	sed -i "s:^#CBCP=y:CBCP=y:" pppd/Makefile.linux
+	sed -i "s:^#CBCP=y:CBCP=y:" pppd/Makefile.linux
+	sed -i "s:^#USE_CRYPT=y:USE_CRYPT=y:" pppd/Makefile.linux
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -68,7 +61,6 @@ build () {
 }
 
 package() {
-	cd "$_builddir"
 	make INSTROOT="$pkgdir" install || return 1
 	install -Dm644 include/net/ppp_defs.h \
 		"$pkgdir"/usr/include/net/ppp_defs.h || return 1
@@ -154,7 +146,7 @@ radius() {
 	_mv usr/lib/pppd/$pkgver/radattr.so 755
 	_mv usr/lib/pppd/$pkgver/radrealms.so 755
 	install -d "$subpkgdir"/etc/radiusclient
-	cp -r "$_builddir"/pppd/plugins/radius/etc/* "$subpkgdir"/etc/radiusclient
+	cp -r "$builddir"/pppd/plugins/radius/etc/* "$subpkgdir"/etc/radiusclient
 	mv "$subpkgdir"/etc/radiusclient/radiusclient.conf.in "$subpkgdir"/etc/radiusclient/radiusclient.conf
 	sed -i "s:@pkgsysconfdir@:/etc/radiusclient:g" "$subpkgdir"/etc/radiusclient/radiusclient.conf
 	sed -i "s:@sbindir@:/usr/sbin:g" "$subpkgdir"/etc/radiusclient/radiusclient.conf
@@ -172,11 +164,12 @@ daemon() {
 	mv "$pkgdir"/* "$subpkgdir"/ || return 1
 }
 
-sha512sums="e34ce24020af6a73e7a26c83c4f73a9c83fa455b7b363794dba27bf01f70368be06bff779777843949bd77f4bc9385d6ad455ea48bf8fff4e0d73cc8fef16ae2  ppp-2.4.7.tar.gz
-fccc7a6809ae4a617796ccf1d2132de8edb1cc0c71d76a95393585a5970b92be2a54da558702db355c8aea8d37b4dfffc64406129a2b3322f0b10e8f0481f685  defaultroute-metric.3.patch
-2f071ea9db15e4abf1bed6cce8130dc81b710a31bfef5fa8f9370c353f845dbc47674b1551b8e040478e5156add6f98d480530206125e8bb308f0f4288d1eec6  musl-fix-headers.patch
+sha512sums="a99b3b6c7bd80cd133bda4e29d33c793a76f3b67e1f8db774547e88932ce29564fad390a4f51d3fe30a75e006499b95000b042ae0f64cd360548426f8091a478  ppp-2.4.8.tar.gz
+55642ce365a7cf7dda05366ac6e74f6badba3cc7bc980760e0a2ee7bfa768ea033c4a3880b3387e0787d719742698f627c624f890d68800344d31c0309c0374d  musl-fix-headers.patch
 8384afb992a98a7f97b484866e6aa1b1de51e901d7837f84f7ce2beba6815591450fab43957f03b65804424c4940c59640a9cd878979240a171aa77427e9c4ff  fix-paths.patch
 b490971d03fef4de66b61123f80a0087270bcb88466ae8ed98ea9a08b35d4c7c46b2dadd304e2970a4206bb5760a14370d7e3873de6240119d88e927ecef840c  0011-build-sys-don-t-put-connect-errors-log-to-etc-ppp.patch
+d1067defff79d6c9f67121a9214e41a1bcca1e3b8a345ad905d223fdb8835142bad7cc3b556a3eca509ddf51cf808741773f31f4dca74e834b612a15854a5e6b  fix-pppd-magic.h.patch
+d76237c82af0a3ed7ede9e814d6849b94221f1fd15e4ee68cadd33a308a32d87d635acd14f84508c9e38a10ad0a9e96ce391044da37e217d11b89a4f6631abf7  fix-pppd-pppoe.h.patch
 160260bd2a788beaac395eadb38efbfd1e0e1a458fe151555acacf2c4f3a12381d644672c664f9793db6e3459a4f05a54e3ff6d407b0d37e8014b15bd0f11bcc  ip-down
 8258c95a6b6e8e94d6001b5cd3a99bd3270f29ba0f2e5050a26c8d5f1b67eead8d039e71ce86a784d45e620047b0a2bb14b258d80a9ea62084ba588a4c2e2d84  ip-up
 bd6f43588b037367ffdb57f5e331492dcaa5969003e219c2dc8b90e6be1aa407282ff6114b91d1379ebeff766983fa0622456520cc0ac592b4f0b1496acf21bf  pppd.initd"
