community/perl-net-dns-sec: upgrade to 1.15

--- a/community/perl-net-dns-sec/APKBUILD
+++ b/community/perl-net-dns-sec/APKBUILD
@@ -3,16 +3,15 @@
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=perl-net-dns-sec
 _pkgreal=Net-DNS-SEC
-pkgver=1.14
+pkgver=1.15
 pkgrel=0
 pkgdesc="DNSSEC extensions to Net::DNS"
 url="https://metacpan.org/pod/Net::DNS::SEC"
 arch="all"
 license="MIT"
-cpandepends="perl-crypt-openssl-dsa perl-net-dns perl-crypt-openssl-rsa
+depends="perl-crypt-openssl-dsa perl-net-dns perl-crypt-openssl-rsa
 	perl-crypt-openssl-random perl-digest-bubblebabble perl-mime-base32
 	perl-crypt-openssl-bignum"
-depends="$cpandepends"
 makedepends="perl-dev openssl-dev"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/N/NL/NLNETLABS/Net-DNS-SEC-$pkgver.tar.gz"
@@ -39,4 +38,4 @@ package() {
 	find "$pkgdir" \( -name perllocal.pod -o -name .packlist \) -delete
 }
 
-sha512sums="ad23b7d4b16a806543400628c50eb43e5d4e0214b77fe356d5fd0e5cab467e1664afbb4cf7b7853433a7cd24f8f87a1236bf244ff6b69809b7c800defa4957bd  Net-DNS-SEC-1.14.tar.gz"
+sha512sums="cd59c487981115754c9f1d32592506a0e1132beaf227e731ef53dc4e885dd25526d43be25d3bede83091c8d4d64b7798cdcff2a02a3603a6ff42c7d23a84c43e  Net-DNS-SEC-1.15.tar.gz"
