--- a/main/perl-cgi/APKBUILD
+++ b/main/perl-cgi/APKBUILD
@@ -3,17 +3,15 @@
 # Maintainer: Timo Teräs <timo.teras@iki.fi>
 pkgname=perl-cgi
 _pkgreal=CGI
-pkgver=4.45
+pkgver=4.46
 pkgrel=0
 pkgdesc="Handle Common Gateway Interface requests and responses"
 url="https://metacpan.org/release/CGI"
 arch="noarch"
 license="GPL-1.0-or-later OR Artistic-1.0-Perl"
-cpandepends="perl-html-parser"
-cpancheckdepends="perl-test-nowarnings perl-test-deep perl-test-warn"
-depends="$cpandepends"
+depends="perl perl-html-parser"
 makedepends="perl-dev"
-checkdepends="$cpancheckdepends"
+checkdepends="perl-test-nowarnings perl-test-deep perl-test-warn"
 subpackages="$pkgname-doc"
 source="https://cpan.metacpan.org/authors/id/L/LE/LEEJO/CGI-$pkgver.tar.gz"
 builddir="$srcdir/$_pkgreal-$pkgver"
@@ -39,4 +37,4 @@ check() {
 	make test
 }
 
-sha512sums="e1dcbc4cd5b89dbe10c9df5d7e35835c567e174744f62feefaeffd254fa351caf171479b3d0a07f06b74f468440c9ca8ef30e93d6526f1724ab1e87964bb0b0f  CGI-4.45.tar.gz"
+sha512sums="11280537b828fc595ad8c3d18a8a0b148cfcaccf1c4d4e58288e581254781182f1f3c4b119880c4e793af3bb051973b52c08142e9f0179178e927c4bfe33a292  CGI-4.46.tar.gz"
