testing/lldpd: upgrade to 1.0.5

--- a/testing/lldpd/APKBUILD
+++ b/testing/lldpd/APKBUILD
@@ -1,9 +1,9 @@
 # Contributor: Francesco Colista <fcolista@alpinelinux.org>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=lldpd
-pkgver=1.0.4
-pkgrel=2
-pkgdesc="Implementation of IEEE 802.1ab (LLDP) "
+pkgver=1.0.5
+pkgrel=0
+pkgdesc="Implementation of IEEE 802.1ab"
 url="http://vincentbernat.github.com/lldpd/"
 arch="all"
 license="ISC"
@@ -16,14 +16,12 @@ subpackages="$pkgname-dev $pkgname-doc
 	$pkgname-zsh-completion:zshcomp:noarch"
 pkgusers="lldpd"
 pkggroups="lldpd"
-source="$pkgname-$pkgver.tar.gz::https://github.com/vincentbernat/$pkgname/archive/$pkgver.tar.gz
+source="$pkgname-$pkgver.tar.gz::https://github.com/vincentbernat/lldpd/archive/$pkgver.tar.gz
 	fix-ppc64le-pathmax.patch
 	$pkgname.confd
 	$pkgname.initd"
-builddir="$srcdir/$pkgname-$pkgver"
 
 prepare() {
-	cd "$builddir"
 	# this should be shipped with the release tarball
 	echo $pkgver > .dist-version
 	./autogen.sh
@@ -31,7 +29,6 @@ prepare() {
 }
 
 build() {
-	cd "$builddir"
 	./configure \
 		--prefix=/usr \
 		--localstatedir=/var \
@@ -51,12 +48,10 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	install -Dm644 /dev/null "$pkgdir/etc/lldpd.conf"
 	install -Dm644 "$srcdir"/$pkgname.confd "$pkgdir/etc/conf.d/$pkgname"
 	install -Dm755 "$srcdir"/$pkgname.initd "$pkgdir/etc/init.d/$pkgname"
@@ -65,13 +60,13 @@ package() {
 }
 
 bashcomp() {
-    pkgdesc="Bash completions for $pkgname"
-    install_if="$pkgname=$pkgver-r$pkgrel bash-completion"
+	pkgdesc="Bash completions for $pkgname"
+	install_if="$pkgname=$pkgver-r$pkgrel bash-completion"
 
-    mkdir -p "$subpkgdir"/usr/share/
-    mv "$pkgdir"/usr/share/bash-completion \
-        "$subpkgdir"/usr/share
-    rmdir -p "$pkgdir"/usr/share 2>/dev/null || true
+	mkdir -p "$subpkgdir"/usr/share/
+	mv "$pkgdir"/usr/share/bash-completion \
+		"$subpkgdir"/usr/share
+	rmdir -p "$pkgdir"/usr/share 2>/dev/null || true
 }
 
 zshcomp() {
@@ -82,8 +77,7 @@ zshcomp() {
 		"$subpkgdir"/usr/share/zsh/site-functions/_lldpcli
 }
 
-
-sha512sums="98a2469141273df73ca2dba7817319cf19691446e4ac6600d701c4d89940a1f05e65e1f9205439ec8559a7928fa5353e39f27917bebd583396c07812bdd08bc4  lldpd-1.0.4.tar.gz
+sha512sums="2081a279c00924e698c98c5189526069d0d8d601ff4058a51cfbbd843cf656cfcf4729c152f9d7796aebed3f16f06030ab35da23378b5bf48da74105fad50f0a  lldpd-1.0.5.tar.gz
 a3a3972ce4cfa98d0de9d958adf18eebb19a442023b321477b3bb8ff3f8297a8708d5c8d70dae06165aac9369d09492d57ffa62e1527968d0c778a7f6fd9678b  fix-ppc64le-pathmax.patch
 a2a4c85068a6b8b80c92fe56af7799a8b8cb2516e5a65b3ae4cb28f278e5acc72402da2a35f0c48a6048fd4a8536061142cafaa49a4bae8e52ca0a5d9ed38b4c  lldpd.confd
 8d88e2a21efee6389d4de4f1ce2fcc9da8bd8ab3cb5a2bf2d322bde577e255662d027688065282146b389b3b8076fb883897e600fd931bcdc30d757fc7191e34  lldpd.initd"
