main/beep: upgrade to 1.4.7

--- a/main/beep/APKBUILD
+++ b/main/beep/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Leonardo Arena <rnalrd@alpinelinux.org>
 # Maintainer: Leonardo Arena <rnalrd@alpinelinux.org>
 pkgname=beep
-pkgver=1.4.6
+pkgver=1.4.7
 pkgrel=0
 pkgdesc="A terminal bell"
 url="https://github.com/spkr-beep/beep"
@@ -9,8 +9,7 @@ arch="all"
 license="GPL-2.0-or-later"
 makedepends="linux-headers"
 subpackages="$pkgname-doc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/spkr-beep/beep/archive/v$pkgver.tar.gz
-	fix-gzip-man.patch"
+source="$pkgname-$pkgver.tar.gz::https://github.com/spkr-beep/beep/archive/v$pkgver.tar.gz"
 
 build() {
 	make
@@ -20,5 +19,4 @@ package() {
 	make DESTDIR="$pkgdir" install
 }
 
-sha512sums="753ab7f22624defba5645c2fceb1382137641fa8f219875783d5809d0bd344c530176b46a61a1d783bb2e5feb17c8137868e02744e1ee5d9e7ec331dbe1fe417  beep-1.4.6.tar.gz
-b0828a0ee0050ca9f601b824f95af78a4db556e1f7b94d8d2a9927a939629fcddf03151c283ed3552c03fb750e06c6880781dcf31926869b66a4793bc6b381fc  fix-gzip-man.patch"
+sha512sums="a1482a16f971c56dc6a62047fa449c96519c897d2e8cb18dcc06178564943c1eb3b9d9106ca6b76054e0fa109e3b161fb8e9ec1966a02d0d739222b5434b71c7  beep-1.4.7.tar.gz"
