--- a/main/distcc/APKBUILD
+++ b/main/distcc/APKBUILD
@@ -1,32 +1,30 @@
 # Contributor: Sören Tempel <soeren+alpine@soeren-tempel.net>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=distcc
-pkgver=3.3.2
-pkgrel=2
-pkgdesc="A distributed C, C++, Obj C compiler"
+pkgver=3.3.3
+pkgrel=0
+pkgdesc="Ddistributed C, C++, Obj C compiler"
 url="https://github.com/distcc/distcc"
 arch="all"
 license="GPL-2.0"
-depends=""
 makedepends="autoconf automake popt-dev python3-dev"
 checkdepends="gdb procps"
 options="!check" # tests are failing
 install="$pkgname.pre-install"
-source="https://github.com/distcc/distcc/releases/download/v$pkgver/$pkgname-$pkgver.tar.gz
-	distcc-hardened.patch
-	distccd.initd distccd.confd"
 subpackages="$pkgname-doc $pkgname-pump"
-builddir="$srcdir/$pkgname"
+source="https://github.com/distcc/distcc/releases/download/v$pkgver/distcc-$pkgver.tar.gz
+	distcc-hardened.patch
+	distccd.initd
+	distccd.confd
+	"
 
 prepare() {
 	default_prepare
 
-	cd "$builddir"
 	./autogen.sh
 }
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -41,12 +39,10 @@ build() {
 }
 
 check() {
-	cd "$builddir"
 	make check
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
 
 	install -D -m644 ../distccd.confd "$pkgdir"/etc/conf.d/distccd
@@ -67,7 +63,7 @@ pump() {
 	mv "$pkgdir"/usr/lib/python* "$subpkgdir"/usr/lib/
 }
 
-sha512sums="fdf11ed94ba50977b45e302179c5c4ba067cc3db37579cb8ed6d5b9487f8e3c89114f65af69333c38d374cf7634d7aef8d5a2d5c7fd8e9b1f4930c0897d6da10  distcc-3.3.2.tar.gz
+sha512sums="d5e7fc67f49ee640cef753038b5c0ebcbbac61c6ac29f20ee4736b045a89979ced765717c46383a4fadc50a4fe34e94e58e307509144414a9ca19eb4cc68a135  distcc-3.3.3.tar.gz
 d1150dc83bf89c332f8c0bd01e15f52f95d71868733bd2e5430a5377f1a4aaa2b5b6e0cd488d33d9b94ce18b0eeeadf4af719db536b001b50e4d482b35c7e057  distcc-hardened.patch
 3c58be08242de09f76876b20a0c6643a3a76a088c356484cb091253b7e4dddb20008d071d8e5d1a66acbc5bfe4d8a59284a6d7f225ca2006e8a8b3c698e71026  distccd.initd
 fbb12522e489243475c735e055a72a19b176f1ad736dc810e1f085d8d9d79460ac7590a92bb9563f8b316437f67f6ca729330253f007d06011144a66fede5465  distccd.confd"
