community/leptonica: upgrade to 1.79.0

--- a/community/leptonica/APKBUILD
+++ b/community/leptonica/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Carlo Landmeter <clandmeter@gmail.com>
 # Maintainer: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=leptonica
-pkgver=1.78.0
+pkgver=1.79.0
 pkgrel=0
 pkgdesc="Software that is broadly useful for image processing and image analysis applications"
 url="http://www.leptonica.com/"
@@ -9,11 +9,9 @@ arch="all"
 license="custom"
 makedepends="libjpeg-turbo-dev tiff-dev libpng-dev zlib-dev giflib-dev libwebp-dev"
 subpackages="$pkgname-dev"
-source="https://github.com/DanBloomberg/$pkgname/releases/download/$pkgver/$pkgname-$pkgver.tar.gz"
-builddir="$srcdir"/$pkgname-$pkgver
+source="https://github.com/DanBloomberg/leptonica/releases/download/$pkgver/leptonica-$pkgver.tar.gz"
 
 build() {
-	cd "$builddir"
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -26,8 +24,8 @@ build() {
 }
 
 package() {
-	cd "$builddir"
 	make DESTDIR="$pkgdir" install
+	rm -f "$pkgdir"/usr/lib/*.a "$pkgdir"/usr/lib/*.la
 }
 
-sha512sums="f059ccc8e7b5ff2c796aeb4ab18bd25e133ec4f38c36b9e2ee203db35a1e68cf45b8baf78ebc4acba4e3607328d1374ea0e8425f35cbe06c6c5728a1ec8c3f50  leptonica-1.78.0.tar.gz"
+sha512sums="4d0830683757004bb47752a17985d80c6758b97c0fd6ec64d23bbf43c9c68b04bee751831574afa4c25f5d5030c0c9f7fc22d9fc8ef932aa990401344f588ba5  leptonica-1.79.0.tar.gz"
