--- a/testing/ocaml-num/APKBUILD
+++ b/testing/ocaml-num/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: alpine-mips-patches <info@mobile-stream.com>
 pkgname=ocaml-num
 _pkgname=num
-pkgver=1.2
+pkgver=1.3
 pkgrel=0
 pkgdesc="Arbitray-precision rational arithmetic for OCaml"
 url="https://github.com/ocaml/num"
@@ -12,7 +12,6 @@ depends="ocaml-runtime"
 makedepends="ocaml ocaml-compiler-libs ocaml-findlib"
 subpackages="$pkgname-dev"
 source="$pkgname-$pkgver.tar.gz::https://github.com/ocaml/$_pkgname/archive/v$pkgver.tar.gz
-	install-DESTDIR.patch
 	"
 builddir="$srcdir/$_pkgname-$pkgver"
 
@@ -52,5 +51,4 @@ dev() {
 	done
 }
 
-sha512sums="cf6b5e026d82235e9ed2cc31cbe1bf29171964a364c6ff23aaf0cc864f646002ce2be5b7296488f1568c7b2166d298298cd086f26fb10b52863dbf78f8b23844  ocaml-num-1.2.tar.gz
-536ca5a1b0d76d9e6f1f33a560974bbebaebdcc020040631bb79d93748313691f8681cc6b43dc77a3dee78feb723b68e6220fa76b8276ad2577f23edd04aa15a  install-DESTDIR.patch"
+sha512sums="c88310f8c45700990095e6b2e9abf24c27347711b9abfd1dde75e540fbbfc6a365e6713bd69f66009af305728fcb36dc61eb37fdd0be7d73824b0e92fbe8c031  ocaml-num-1.3.tar.gz"
