main/open-isns: upgrade to 0.100

--- a/main/open-isns/APKBUILD
+++ b/main/open-isns/APKBUILD
@@ -1,6 +1,6 @@
 # Maintainer: Leonardo Arena <rnalrd@alpinelinux.org>
 pkgname=open-isns
-pkgver=0.99
+pkgver=0.100
 pkgrel=0
 pkgdesc="iSNS server and client for Linux"
 url="https://github.com/open-iscsi/open-isns"
@@ -19,6 +19,7 @@ prepare() {
 }
 
 build() {
+	CFLAGS="$CFLAGS -Wno-error" \
 	./configure \
 		--host=$CHOST \
 		--build=$CBUILD \
@@ -44,4 +45,4 @@ lib() {
 	mv "$pkgdir"/usr/lib "$subpkgdir"/usr
 }
 
-sha512sums="90a2297535c5e939f83c761173ce5f5f88e68adc31e41e833b23d07b6dc6959572ae7184db0084b861918199a877b251ebae4b4a7456fdd8c93400dc8457adc9  open-isns-0.99.tar.gz"
+sha512sums="ccf49ba1c60d46ae49b75424a966abc1f7e104c8ffa13013951a58a8f0ccaa1cf550f24fd2743fcaba1211a0ec8033c5df5249b7a108ae5974d4f1144dd3b169  open-isns-0.100.tar.gz"
