main/sysstat: remove obsolete patch
This is fixed upstream in different ways

--- a/main/sysstat/APKBUILD
+++ b/main/sysstat/APKBUILD
@@ -9,8 +9,7 @@ arch="all"
 license="GPL-2.0-or-later"
 makedepends="linux-headers"
 subpackages="$pkgname-doc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/sysstat/sysstat/archive/v$pkgver.tar.gz
-	musl-fix-includes.patch"
+source="$pkgname-$pkgver.tar.gz::https://github.com/sysstat/sysstat/archive/v$pkgver.tar.gz"
 
 build() {
 	./configure \
@@ -29,5 +28,4 @@ package() {
 
 }
 
-sha512sums="2398be1d5181616c337ead8f62b6bfb1144b89c747800140503c6a94793976f7909c81b656290577d51ebdee2f380418902846271b48ed79c6d7f02306f0a8a1  sysstat-12.2.0.tar.gz
-183ff89a3a0c3923b436991a2653a133942525b5f45d842ee6ed3546166211cf12828e07dc4ded2d4af8451f049ae75a87fc903a6297791034d6b304c6ef0faf  musl-fix-includes.patch"
+sha512sums="2398be1d5181616c337ead8f62b6bfb1144b89c747800140503c6a94793976f7909c81b656290577d51ebdee2f380418902846271b48ed79c6d7f02306f0a8a1  sysstat-12.2.0.tar.gz"
