testing/alkimia: upgrade to 8.0.3

--- a/testing/alkimia/APKBUILD
+++ b/testing/alkimia/APKBUILD
@@ -1,13 +1,17 @@
 # Contributor: Bart Ribbers <bribbers@disroot.org>
 # Maintainer: Bart Ribbers <bribbers@disroot.org>
 pkgname=alkimia
-pkgver=8.0.2
+pkgver=8.0.3
 pkgrel=0
 arch="all !armhf" # armhf blocked by qt5-qtdeclarative
 url="https://community.kde.org/Alkimia/libalkimia"
 pkgdesc="A library with common classes and functionality used by finance applications for the KDE SC"
 license="GPL-3.0-or-later"
-makedepends="extra-cmake-modules qt5-qtbase-dev qt5-qtwebkit-dev qt5-qtdeclarative-dev kconfig-dev kcoreaddons-dev kcompletion-dev ki18n-dev kpackage-dev plasma-framework-dev knewstuff-dev kio-dev kiconthemes-dev ktextwidgets-dev kdoctools-dev kitemmodels-dev kdelibs4support-dev kinit-dev gmp-dev doxygen graphviz"
+makedepends="extra-cmake-modules qt5-qtbase-dev qt5-qtwebkit-dev
+	qt5-qtdeclarative-dev kconfig-dev kcoreaddons-dev kcompletion-dev ki18n-dev
+	kpackage-dev plasma-framework-dev knewstuff-dev kio-dev kiconthemes-dev
+	ktextwidgets-dev kdoctools-dev kitemmodels-dev kdelibs4support-dev
+	kinit-dev gmp-dev doxygen graphviz"
 checkdepends="xvfb-run"
 source="https://download.kde.org/stable/alkimia/$pkgver/alkimia-$pkgver.tar.xz"
 subpackages="$pkgname-dev $pkgname-lang"
@@ -28,4 +32,4 @@ package() {
 	DESTDIR="$pkgdir" make install
 }
 
-sha512sums="5c0c121cac121f68042208ea9b126e4916ee4fa11f41d99709fbf11c44f433ec5eb0c0e112a4e6dc9ccfbc8a5295729cee566783f089bbe9ec2b32b5084839a6  alkimia-8.0.2.tar.xz"
+sha512sums="04debd3adeba6380ffe7e9d3949e927dca12ecd7f83dea7b7ba6295b158272c636978c89800757166889e632fed09f3e8b3ce19adc9b91e3369e3b16a5b6cb1e  alkimia-8.0.3.tar.xz"
