--- a/testing/telegram-tdlib/APKBUILD
+++ b/testing/telegram-tdlib/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Oleg Titov <oleg.titov@gmail.com>
 # Maintainer: Oleg Titov <oleg.titov@gmail.com>
 pkgname=telegram-tdlib
-pkgver=1.5.0
+pkgver=1.6.0
 pkgrel=0
 pkgdesc="Cross-platform library for building Telegram clients"
 url="https://core.telegram.org/tdlib"
@@ -10,9 +10,7 @@ license="BSL-1.0"
 options="!check" # No test suite from upstream
 makedepends="cmake openssl-dev zlib-dev gperf linux-headers"
 subpackages="$pkgname-static $pkgname-dev $pkgname-doc"
-source="$pkgname-$pkgver.tar.gz::https://github.com/tdlib/td/archive/v$pkgver.tar.gz
-	sysctl_h.patch
-	"
+source="$pkgname-$pkgver.tar.gz::https://github.com/tdlib/td/archive/v$pkgver.tar.gz"
 builddir="$srcdir/td-$pkgver"
 
 build() {
@@ -34,5 +32,4 @@ package() {
 		README.md
 }
 
-sha512sums="57f7dcaacd253d06852d95e210c6ecefa3d477f36d74f1f934a9affb621e99258bd631b7c3573df84812f9f44e6ceb090fbbc62e9f541c5d539fbab0ee51a222  telegram-tdlib-1.5.0.tar.gz
-f90e2e40c8a85b2df4fe7149e6cbf399b228f9084b25d8d48d38a1b9315ab536c8a68a0d910e17445b54a793411e77df530c16b08e405385b12ca1d35ddf3f53  sysctl_h.patch"
+sha512sums="aee8b3df17e8571ca587cc72092305fd0992fefc4d9f60b2c530c9e6726c6b6371f0e5819ca4d5a4ffbbef1345f2a18156aae979b80e124ffe183423f8f515e0  telegram-tdlib-1.6.0.tar.gz"
