--- a/main/py3-django/APKBUILD
+++ b/main/py3-django/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=py3-django
 _pkgname=Django
-pkgver=1.11.27
+pkgver=1.11.28
 pkgrel=0
 pkgdesc="A high-level Python3 Web framework"
 url="https://djangoproject.com/"
@@ -18,6 +18,8 @@ replaces="py-django" # Backwards compatibility
 provides="py-django=$pkgver-r$pkgrel" # Backwards compatibility
 
 # secfixes:
+#   1.11.28-r0:
+#     - CVE-2020-7471
 #   1.11.27-r0:
 #     - CVE-2019-19844
 #   1.11.23-r0:
@@ -65,4 +67,4 @@ package() {
 	ln -s django-admin "$pkgdir"/usr/bin/django-admin-3
 }
 
-sha512sums="02370bc69d715fbd0d0460e801840331670f7348767040035d80d5e881eae90259dfa4b6406af37d827361691aca464bc4d556e525c32a94413528d0593fdf09  Django-1.11.27.tar.gz"
+sha512sums="d814cf8637367133edc231eff78ae5444d2ea431e4eecf89733bb57bec62b5a9eb0751cb8b28205e05975a0ebd96a8480118b2790e98b319643675e13f205af0  Django-1.11.28.tar.gz"
