--- a/main/py-django/APKBUILD
+++ b/main/py-django/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=py-django
 _pkgname=Django
-pkgver=1.11.27
+pkgver=1.11.28
 pkgrel=0
 pkgdesc="A high-level Python Web framework"
 url="http://djangoproject.com/"
@@ -16,6 +16,8 @@ source="https://files.pythonhosted.org/packages/source/${_pkgname:0:1}/$_pkgname
 builddir="$srcdir"/$_pkgname-$pkgver
 
 # secfixes:
+#   1.11.28-r0:
+#     - CVE-2020-7471
 #   1.11.27-r0:
 #     - CVE-2019-19844
 #   1.11.23-r0:
@@ -95,4 +97,4 @@ _py() {
 	done
 }
 
-sha512sums="02370bc69d715fbd0d0460e801840331670f7348767040035d80d5e881eae90259dfa4b6406af37d827361691aca464bc4d556e525c32a94413528d0593fdf09  Django-1.11.27.tar.gz"
+sha512sums="d814cf8637367133edc231eff78ae5444d2ea431e4eecf89733bb57bec62b5a9eb0751cb8b28205e05975a0ebd96a8480118b2790e98b319643675e13f205af0  Django-1.11.28.tar.gz"
