--- a/testing/hy/APKBUILD
+++ b/testing/hy/APKBUILD
@@ -1,17 +1,16 @@
 # Contributor: Sören Tempel <soeren+alpine@soeren-tempel.net>
 # Maintainer: Sören Tempel <soeren+alpine@soeren-tempel.net>
 pkgname=hy
-pkgver=0.17.0
+pkgver=0.18.0
 pkgrel=0
 pkgdesc="Dialect of Lisp that's embedded in Python"
 url="http://hylang.org/"
 arch="noarch"
 license="MIT"
-depends="python3 py3-funcparserlib py3-astor py3-rply py3-clint"
+depends="python3 py3-funcparserlib py3-astor py3-rply py3-clint py3-colorama"
 makedepends="py3-setuptools"
-checkdepends="python3-tests py3-pytest py3-pytest-runner py3-setuptools py3-tox"
-source="$pkgname-$pkgver.tar.gz::https://github.com/hylang/$pkgname/archive/$pkgver.tar.gz
-	0001-get_version.py-allow-specifying-version-in-environme.patch"
+checkdepends="python3-tests py3-pytest py3-pytest-runner py3-tox"
+source="$pkgname-$pkgver.tar.gz::https://github.com/hylang/hy/archive/$pkgver.tar.gz"
 
 # By default setup.py tries to determine the hy version using
 # git-describe(1). Unfourtunatly, this will return the version
@@ -36,5 +35,4 @@ package() {
 	rm -rf "$pkgdir"/usr/get_version
 }
 
-sha512sums="18601bf47df2120f8833a1ae211c416dc90825f31cd50b259adfe0585089a623d0fea13512b2935b093e14d8595c93bc1610939d5f1d664f6acf7ddf7e341542  hy-0.17.0.tar.gz
-4676ff5b4a48f6b3aff7667688a6eca96419fc6c61deb66b53d94b1a4618460f9274b6380c20b3182827474aa9b6158864eadc803cb400557a23fc6150344d2b  0001-get_version.py-allow-specifying-version-in-environme.patch"
+sha512sums="ff578eb6ca70f82492b37bfcc41167e8f8d50337bbdd6b049edb654163b60156a65933aa723ea357fee0f84dc25837d70bd00251760fa2b00f599088e592d97c  hy-0.18.0.tar.gz"
