--- a/main/libebml/APKBUILD
+++ b/main/libebml/APKBUILD
@@ -12,7 +12,7 @@ makedepends="cmake"
 subpackages="$pkgname-dev"
 source="http://dl.matroska.org/downloads/libebml/libebml-$pkgver.tar.xz"
 
-# secfixes
+# secfixes:
 #   1.3.6-r0:
 #     - CVE-2019-13615
 
