--- a/main/lz4/APKBUILD
+++ b/main/lz4/APKBUILD
@@ -11,7 +11,7 @@ checkdepends="diffutils"
 subpackages="$pkgname-static $pkgname-dev $pkgname-doc $pkgname-libs $pkgname-tests:tests"
 source="$pkgname-$pkgver.tar.gz::https://github.com/$pkgname/$pkgname/archive/v$pkgver.tar.gz"
 
-# secfixes
+# secfixes:
 #   1.9.2-r0:
 #     - CVE-2019-17543
 
