community/sox: fix secfixes comment

--- a/community/sox/APKBUILD
+++ b/community/sox/APKBUILD
@@ -34,7 +34,7 @@ source="https://downloads.sourceforge.net/sourceforge/$pkgname/$pkgname-$pkgver.
 	fix-musl.patch
 	"
 
-# secfixes
+# secfixes:
 #   14.4.2-r5:
 #     - CVE-2017-13571
 #     - CVE-2017-11358
