--- a/main/busybox/APKBUILD
+++ b/main/busybox/APKBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=busybox
 pkgver=1.31.1
-pkgrel=9
+pkgrel=10
 pkgdesc="Size optimized toolbox of many common UNIX utilities"
 url="https://busybox.net/"
 arch="all"
@@ -35,6 +35,7 @@ source="https://busybox.net/downloads/busybox-$pkgver.tar.bz2
 	0012-udhcpc-Don-t-background-if-n-is-given.patch
 	0013-testsuite-fix-cpio-tests.patch
 	busybox-bc.patch
+	nslookup.patch
 
 	acpid.logrotate
 	busyboxconfig
@@ -225,6 +226,7 @@ f96d66ce5a0295a2459a2c49c281b64e016de675ebd31a49af18cb06f3498fe27dfbc8667324b439
 b0f956e98ed1b670dc27f835441407d32395d371599780cf87a5fb2eee43ad2f77c8c484d20f08b1ed5d2bdee039668ff1a0b02561fa8206832072ab3b89cc45  0012-udhcpc-Don-t-background-if-n-is-given.patch
 d8926f0e4ed7d2fe5af89ff2a944d781b45b109c9edf1ef2591e7bce2a8bbadd7c8ca814cb3c928ae09027d9603434fe70496f308d701f3d42260ebd1e9e9b29  0013-testsuite-fix-cpio-tests.patch
 9bb4d16ca418b6fd3c0b6dc867c92920e66ddb0c98040373d1166608284d2755b8d6eed0022bfddfcc07f5df93974fb7ed79402511a9728eb6c95ce05c37cfeb  busybox-bc.patch
+00d7f186bac8f228ebda3c486282df34c0021b58948946f4b2c7efe0cccf5f34a0e0430318359f1008ed51455747ffb525010f2feef450faf05fbc511d99d1d6  nslookup.patch
 aa93095e20de88730f526c6f463cef711b290b9582cdbd8c1ba2bd290019150cbeaa7007c2e15f0362d5b9315dd63f60511878f0ea05e893f4fdfb4a54af3fb1  acpid.logrotate
 4d4562d6cfc20f97dc7ce6326a79447b94007d5986c88c269910d16a71382c069e6ec30ea9468c1206360649d588309ca97af27da6cb8fa5338e55f21e005692  busyboxconfig
 5f9739b9d0c1ba5d77e3153c373593a1bcb813cf466f951b00a2a040262e5077fb13c1a7aa17d67d1533a473bfcacc1a22833b7f491b4dde9dcb5638ad585f9a  busyboxconfig-extras
