--- a/main/mosquitto/APKBUILD
+++ b/main/mosquitto/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=mosquitto
 pkgver=1.6.8
-pkgrel=0
+pkgrel=1
 pkgdesc="An Open Source MQTT v3.1 Message Broker"
 url="https://mosquitto.org/"
 arch="all"
@@ -12,7 +12,7 @@ install="$pkgname.pre-install"
 options="!check" # FIXME: some of the tests are flaky
 makedepends="openssl-dev c-ares-dev util-linux-dev libwebsockets-dev libxslt"
 checkdepends="python3 cunit-dev"
-subpackages="$pkgname-dev $pkgname-doc $pkgname-libs++:_pp $pkgname-openrc
+subpackages="$pkgname-dbg $pkgname-dev $pkgname-doc $pkgname-libs++:_pp $pkgname-openrc
 	$pkgname-libs $pkgname-clients"
 source="http://mosquitto.org/files/source/mosquitto-$pkgver.tar.gz
 	config.patch
