--- a/main/alpine-ipxe/APKBUILD
+++ b/main/alpine-ipxe/APKBUILD
@@ -1,8 +1,7 @@
 # Contributor: Carlo Landmeter <clandmeter@alpinelinux.org>
 # Maintainer: Carlo Landmeter <clandmeter@alpinelinux.org>
 pkgname=alpine-ipxe
-pkgver=1.0_git20190802
-_sha=c63ef427a2b18d318b313a4adf6267bb4dfa0c1c
+pkgver=1.20.1
 pkgrel=0
 pkgdesc="iPXE build for Alpine Linux netboot"
 url="https://boot.alpinelinux.org"
@@ -13,15 +12,15 @@ makedepends="xz-dev perl coreutils bash syslinux xorriso"
 options="!strip !check !archcheck !tracedeps" # no tests
 install=""
 subpackages=""
-source="ipxe-$pkgver.tar.gz::https://github.com/ipxe/ipxe/archive/$_sha.tar.gz
+source="ipxe-$pkgver.tar.gz::https://github.com/ipxe/ipxe/archive/v$pkgver.tar.gz
 	DST_Root_CA_X3.pem
 	alpine-netboot-ca.crt
 	boot.ipxe
 	"
-builddir="$srcdir/ipxe-$_sha/src"
+builddir="$srcdir/ipxe-$pkgver/src"
 
 # default build targets for x86 systems
-_targets="bin/ipxe.iso bin/ipxe.lkrn bin/ipxe.pxe bin/undionly.kpxe bin/ipxe.usb"
+_targets="bin/ipxe.iso bin/ipxe.lkrn bin/ipxe.pxe bin/undionly.kpxe bin/ipxe.usb bin/ipxe.dsk"
 
 case $CARCH in
 	x86)
@@ -79,7 +78,7 @@ _split() {
 		"$subpkgdir"/usr/share/$pkgname
 }
 
-sha512sums="994824f044b8ec76e51436c21cab61f3936f3cafd70b9eba78b25dea67bf700039e06e05527d44556e73849dda758ea591ce22d07346bc27d03e8082497f849f  ipxe-1.0_git20190802.tar.gz
+sha512sums="39142187c7b84e81ed95865b2c6ca6624fd10ee49350741bcf4beff47cd4ebdce91eca9d7b4d3d91e45b96bd50fa554fa6b71e8e3ea6bcc474b0a71f5d35e5cd  ipxe-1.20.1.tar.gz
 1f52b62aa9e3ec0656ea3cb5c8e52eda924d58728e64bb03ca6c112858b91b13cf0a9328b105bb232973e240406b240ed14e72b5bd325e82e6fddf3126dbcc58  DST_Root_CA_X3.pem
 68030e3f30983ee45c7f740445a246ea0df225becdd0644e06ffdbd84682ac576934dab79fecceb31b70929d81ce85b40301a977862bf7beb042270be21e6d34  alpine-netboot-ca.crt
 5a4f1edd0178e696e919e93b90689091f669bffe77ebb9da10d4872d208205fe42b285551f541a07b2067054a2344639052e2b297a582a1f71d907797a77d719  boot.ipxe"
